# z47

./: .gitignore  .gitlab-ci.yml  .gitmodules  20251006-21371800.REGS.TSV  BUILD.md  C47.pgm  CONTRIBUTING.md  Makefile  README.md  ZIG-README.md  backup copy.cfg  backup.cfg.BAK  backup.matrix.cfg  backup2.cfg  backup3.cfg  backupjm.cfg  build.zig  dist  distS  meson.build  meson_options.txt  tag2ver.py
.github/: zig-toolchain.env
.github/project/: check-source-ownership.sh  check-zig-c-boundaries.sh  generate-simulator-notice-artifacts.py  nested-upstream-pilot.sh  source-ownership.txt  upstream-pin.env  workflow-imported-root-paths.sh  zig-c-boundaries.txt
.github/workflows/: upstream-drift.yml  upstream-oracle.yml
PROGRAMS/: Binet1.p47  TSTAEQ.p47
dep/: meson.build
dep/decNumberICU/: decNumber.c  decNumberLocal.h  decQuad.h
docs/code/: Doxyfile  conf.py  index.rst
res/: PACKAGES.md  c47.cmd  c47.xpm  c47_narrow_screen_pre.css  c47_pre.css  r47.cmd  r47.reg
res/Light background C47/: c47_pre.css
res/PROGRAMS/: 47DEFLT.p47  47DEFLT.rtf  58 Tests.TXT  8888.TXT  Battery usage plot.TXT  Binet Fibonacci Plot.TXT  CUBEs3.TXT  CalculatorTest.TXT  Example programs.txt  Fibonacci Formulas.TXT  Gudermannian.TXT  GudrmPL.p47  HP35fun.p47  HP35fun.rtf  Mersenne Prime 1279.TXT  Mersenne Prime 2203.TXT  Mersenne Prime 2281.TXT  Mersenne Prime 3217.TXT  Mersenne Prime 607.TXT  Mersenne Prime X.TXT  Plot Formula.TXT  Plot prime times.TXT  SPIRALk.p47  SPIRALk.rtf  Sinc Plot.TXT  SincPI Plot.TXT  XEQMINDEX.TXT
res/STATE/: xfnToC47user.s47  xfnToR47user.s47
res/combo/: R47_combo.py
res/dmcp5/: install_C47_on_DM42n.txt  install_R47_on_DM32.txt  testPgms.txt  update_R47.txt
res/fonts/: C47_Font changes.txt  sortingOrder.csv  sortingOrder.xlsx
scripts/: zig_dist.py
src/c47/: assign.c  assign.h  bufferize.c  bufferize.h  c47.c  c47.h  calcMode.c  calcMode.h  charString.c  charString.h  config.c  config.h  constants.c  constants.h  conversionAngles.c  conversionAngles.h  conversionUnits.c  conversionUnits.h  curveFitting.c  curveFitting.h  dateTime.c  dateTime.h  debug.c  debug.h  defines.h  display.c  display.h  error.c  error.h  flags.c  flags.h  fonts.c  fonts.h  fractions.c  fractions.h  integers.c  integers.h  items.c  items.h  keyboard.c  (+42 more)
src/c47-dmcp/: main.h  meson.build  stm32_program.ld  stm32_program.ld.cpgz
src/c47-dmcp/TWO-FILE-QSPI/: qspi_crc.h
src/c47-dmcp/hal/: audio.c  io.c  print_ir.c
src/c47-dmcp5/: cross_arm_gcc.build  main.h  meson.build  stm32_program.ld
src/c47-dmcp5/TWO-FILE-QSPI/: qspi_crc.h
src/c47-dmcp5/hal/: audio.c  io.c  print_ir.c
src/c47-gtk/: c47-gtk.c  c47-gtk.h  c47-gtk.rc  gtkGui.c  gtkGui.h  meson.build  r47-gtk.rc
src/c47-gtk/hal/: audio.c  gui.c  io.c  lcd.c  print_ir.c
src/generateCatalogs/: generateCatalogs.c  meson.build
src/generateConstants/: generateConstants.c  meson.build
src/generateTestPgms/: generateTestPgms.c  meson.build
src/index spreadsheet/: CONFIG defaults.xlsx  GTK key codes.xlsx  KEYS_Layout_automation_all_layers_0_108_14_00_00_master-updating-dani brainstorm 2023-11-21 rj.xlsx  KEYS_Layout_automation_all_layers_20231124_updating_rjvm.xlsx  KEYS_Layout_automation_all_layers_20231125_updated rjvm.xlsx  KEYS_Layout_automation_all_layers_20231204.xlsx  KEYS_Layout_automation_all_layers_20231218_updated_3.xlsx  KEYS_Layout_automation_all_layers_20231218_updated_4.xlsx  KEYS_Layout_automation_all_layers_20231218_updated_6.xlsx  KEYS_Layout_automation_all_layers_20231218_updated_7.xlsx  KEYS_Layout_automation_all_layers_20231218_updated_8b.xlsx  KEYS_Layout_automation_all_layers_20240104_updated_9b.xlsx  KEYS_Layout_automation_all_layers_20240119_updated.xlsx  KEYS_Layout_automation_all_layers_20240125_updated.xlsx  KEYS_Layout_automation_all_layers_20240501b_rjvm.xlsx  Keyboard Temp Key1.xlsx  Keyboard Temp Key1b.xlsx  Keyboard Temp Key1c.xlsx  Keyboard Temp Key1d.xlsx  Keyboard Temp Key1e.xlsx  New and updated labels for Chef menu_rj_jm.xlsx  XPORTP 2023-07-17.txt  alpha checklists.xlsx  items4_108.13.04.xlsx
src/testSuite/: meson.build  testSuite.c  testSuite.h
src/testSuite/hal/: audio.c  gui.c  io.c  lcd.c  print_ir.c
src/testSuite/tests/: 10pow.txt  2pow.txt  HMStoTM.txt  HRtoTM.txt  LINPOL.txt  addition_complex.txt  addition_complexMatrix.txt  addition_date.txt  addition_longInteger.txt  addition_real.txt  addition_realMatrix.txt  addition_shortInteger.txt  addition_string.txt  addition_time.txt  agm.txt  and.txt  arccos.txt  arccosh.txt  arcsin.txt  arcsinh.txt  arctan.txt  arctanh.txt  argument.txt  atan2.txt  bessel_j.txt  bessel_y.txt  beta.txt  binomial_i.txt  binomial_l.txt  binomial_p.txt  binomial_r.txt  bn.txt  bn_star.txt  cauchy_i.txt  cauchy_l.txt  cauchy_p.txt  cauchy_r.txt  ceil.txt  changeSign.txt  chebyshev_t.txt  (+241 more)
src/ttf2RasterFonts/: meson.build  testTtf2RasterFonts.c  ttf2RasterFonts.c
src/wp43/: assign.c  assign.h  bufferize.c  calcMode.c  charString.c  config.c  config.h  constants.c  conversionAngles.c  conversionUnits.c  curveFitting.c  curveFitting.h  dateTime.c  debug.c  defines.h  display.c  flags.c  fonts.h  fractions.c  integers.c  items.c  items.h  keyboard.c  memory.c  memory.h  meson.build  plotstat.c  plotstat.h  realType.c  realType.h  recall.c  registerValueConversions.c  registerValueConversions.h  registers.c  registers.h  saveRestoreCalcState.c  saveRestoreCalcState.h  (+14 more)
src/wp43-dmcp/: meson.build
src/wp43-dmcp5/: stm32_program.ld
src/wp43-gtk/: gtkGui.c  meson.build  wp43-gtk.c
subprojects/packagefiles/gmp-6.2.1/: meson.build
tools/: add_pgm_chsum  create items spreadsheet.py  gen_qspi_crc  modify_crc  onARaspberry  size.py
zig_bridge/: c47.h
zig_build/: common.zig  dist.zig  firmware.zig  host.zig  zig_dist.py
zig_docs/: 00-project-and-upstream.md  10-build-and-source-layout.md  20-zig-build-graph.md  30-host-and-generated-surfaces.md  40-firmware-and-distribution.md  50-zig-c-boundaries-and-rewrite-policy.md  60-ci-and-release-workflow.md  70-tests-and-verification.md  80-maintainer-workflow.md  90-official-references.md  README.md
(+767 files in other folders)
